Added module info and experimented with different pom.xml settings